--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">23it309_NguyenHuuViet</string>
+    <string name="app_name">23da040_NguyenDinhPhuongNam</string>
     <string name="hint_enter_number">Nhập số cần kiểm tra</string>
     <string name="btn_check">Kiểm tra</string>
     <string name="add_course">Thêm học phần</string>
